:recycle:Refactor: 코드 리팩토링 및 예외처리